changed test, fixed errors